<?xml version="1.0" encoding="utf-8"?>
<!--*****************************COPYRIGHT***********************************
 * This file is part of the Emergency Data Collector for Android™ (EDCA).	*
 * Copyright © 2013 Mattias Spångmyr.										*
 * 																			*
 *********************************LICENSE************************************
 * EDCA is free software: you can redistribute it and/or modify it under	*
 * the terms of the GNU General Public License as published by the Free		*
 * Software Foundation, either version 3 of the License, or (at your		*
 * option) any later version.												*
 *																			*
 * EDCA is distributed in the hope that it will be useful, but WITHOUT ANY	*
 * WARRANTY; without even the implied warranty of MERCHANTABILITY or		*
 * FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License	*
 * for more details.														*
 *																			*
 * You should have received a copy of the GNU General Public License along	*
 * with EDCA. If not, see "http://www.gnu.org/licenses/".					*
 * 																			*
 * The latest source for this software can be accessed at					*
 * "github.org/mattiassp/edca".												*
 * 																			*
 * EDCA also utilizes the JTS Topology Suite, Version 1.8 by Vivid			*
 * Solutions Inc. It is released under the Lesser General Public License	*
 * ("http://www.gnu.org/licenses/") and its source can be accessed at the	*
 * JTS Topology Suite website ("http://www.vividsolutions.com/jts").		*
 * 																			*
 * Android™ is a trademark of Google Inc. The Android source is released	*
 * under the Apache License 2.0												*
 * ("http://www.apache.org/licenses/LICENSE-2.0") and can be accessed at	*
 * "http://source.android.com/".											*
 * 																			*
 * For other enquiries, e-mail to: edca.contact@gmail.com					*
 * 																			*
 **************************************************************************-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/mapviewer_optionsmenu_addposition"
          android:title="@string/mapviewer_optionsmenu_addposition"
          android:icon="@android:drawable/ic_menu_mylocation">
    </item>
    <item android:id="@+id/mapviewer_optionsmenu_manualadd"
          android:icon="@android:drawable/ic_menu_edit"
          android:title="@string/mapviewer_optionsmenu_manualadd">
    </item>
    <item android:id="@+id/mapviewer_optionsmenu_selectsequence"
          android:icon="@drawable/sequence_add"
          android:title="@string/mapviewer_optionsmenu_selectsequence">
    </item>
    <item android:id="@+id/mapviewer_optionsmenu_combinesequence"
          android:icon="@drawable/sequence_combine"
          android:title="@string/mapviewer_optionsmenu_combinesequence">
    </item>
    <item android:id="@+id/mapviewer_optionsmenu_clearselection"
          android:icon="@drawable/sequence_clear"
          android:title="@string/mapviewer_optionsmenu_clearselection">
    </item>
</menu>